clusters/homelab/apps/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: proxmox-proxmox-insecure@kubernetescrd
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  type: ClusterIP
  selector:
    app: proxmox
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
